--- a/esx_menu_default/html/css/app.css
+++ b/esx_menu_default/html/css/app.css
@@ -10,12 +10,12 @@
 	border-radius: 25px;
 }
 
-.menu.align-left {
+.menu.align-right {
 	right: 25%;
 	top: 25%;
 }
 
-.menu.align-top-left {
+.menu.align-top-right {
 	right: 25%;
 	top: 25%;
 }
@@ -46,7 +46,7 @@
 	top: 25%;
 }
 
-.menu.align-bottom-left {
+.menu.align-bottom-right {
 	right: 25%;
 	top: 25%;
 }
@@ -59,7 +59,7 @@
 .menu .head {
 	margin-bottom: 2px;
 	font-family: 'Poppins', sans-serif;
-	padding-left: 5px;
+	padding-right: 5px;
 	padding-right: 5px;
 	display: block;
 	background-color: #ca5e0b;
@@ -80,7 +80,7 @@
 .menu .menu-items .menu-item {
 	margin-bottom: 2px;
   	font-family: 'Poppins', sans-serif;
-	padding-left: 10px;
+	padding-right: 10px;
 	padding-right: 10px;
 	display: block;
 	background-color:#2c2f33;
